kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      project: django-proj
  template:
    metadata:
      labels:
        project: django-proj
    spec:
      containers:
        - name: django-app-1
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
