kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-app
spec:
  type: NodePort
  selector:
    project: django-proj
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
